[package]
name = "byte_input_conversion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotg-rune-core = { git = "https://github.com/hotg-ai/rune", rev = "999c54f4232b65b444c1e29268bfeb12aa24a6cb" }
hotg-rune-proc-blocks = { git = "https://github.com/hotg-ai/rune", rev = "999c54f4232b65b444c1e29268bfeb12aa24a6cb" }
log = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"